feat: Remove JWT
