# openapischema.yml
@@ -3,91 +3,45 @@ info:
   title: ''
   version: 0.0.0
 paths:
-  /api/auth/token/:
+  /api/auth/login/:
     post:
-      operationId: auth_token_create
-      description: |-
-        Takes a set of user credentials and returns an access and refresh JSON web
-        token pair to prove the authentication of those credentials.
+      operationId: auth_login_create
       tags:
       - auth
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/CustomTokenObtainPair'
+              $ref: '#/components/schemas/Login'
           application/x-www-form-urlencoded:
             schema:
-              $ref: '#/components/schemas/CustomTokenObtainPair'
+              $ref: '#/components/schemas/Login'
           multipart/form-data:
             schema:
-              $ref: '#/components/schemas/CustomTokenObtainPair'
+              $ref: '#/components/schemas/Login'
         required: true
       responses:
         '200':
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/CustomTokenObtainPair'
+                $ref: '#/components/schemas/Login'
           description: ''
-  /api/auth/token/blacklist/:
+  /api/auth/logout/:
     post:
-      operationId: auth_token_blacklist_create
+      operationId: auth_logout_create
       tags:
       - auth
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/TokenBlacklistView'
-          application/x-www-form-urlencoded:
-            schema:
-              $ref: '#/components/schemas/TokenBlacklistView'
-          multipart/form-data:
-            schema:
-              $ref: '#/components/schemas/TokenBlacklistView'
-        required: true
       responses:
         '200':
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/TokenBlacklistView'
-          description: ''
-  /api/auth/token/refresh/:
-    post:
-      operationId: auth_token_refresh_create
-      description: |-
-        Takes a refresh type JSON web token and returns an access type JSON web
-        token if the refresh token is valid.
-      tags:
-      - auth
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/TokenRefresh'
-          application/x-www-form-urlencoded:
-            schema:
-              $ref: '#/components/schemas/TokenRefresh'
-          multipart/form-data:
-            schema:
-              $ref: '#/components/schemas/TokenRefresh'
-        required: true
-      responses:
-        '200':
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/TokenRefresh'
-          description: ''
+          description: No response body
   /api/business/business_area//:
     get:
       operationId: business_business_area_list
       tags:
       - business
       security:
-      - jwtAuth: []
+      - cookieAuth: []
       responses:
         '200':
           content:
@@ -114,7 +68,7 @@ paths:
               $ref: '#/components/schemas/BusinessArea'
         required: true
       security:
-      - jwtAuth: []
+      - cookieAuth: []
       responses:
         '201':
           content:
@@ -135,7 +89,7 @@ paths:
       tags:
       - business
       security:
-      - jwtAuth: []
+      - cookieAuth: []
       responses:
         '200':
           content:
@@ -167,7 +121,7 @@ paths:
               $ref: '#/components/schemas/BusinessArea'
         required: true
       security:
-      - jwtAuth: []
+      - cookieAuth: []
       responses:
         '200':
           content:
@@ -198,7 +152,7 @@ paths:
             schema:
               $ref: '#/components/schemas/PatchedBusinessArea'
       security:
-      - jwtAuth: []
+      - cookieAuth: []
       responses:
         '200':
           content:
@@ -218,7 +172,7 @@ paths:
       tags:
       - business
       security:
-      - jwtAuth: []
+      - cookieAuth: []
       responses:
         '204':
           description: No response body
@@ -228,7 +182,7 @@ paths:
       tags:
       - campaign
       security:
-      - jwtAuth: []
+      - cookieAuth: []
       responses:
         '200':
           content:
@@ -255,7 +209,7 @@ paths:
               $ref: '#/components/schemas/Campaign'
         required: true
       security:
-      - jwtAuth: []
+      - cookieAuth: []
       responses:
         '201':
           content:
@@ -276,7 +230,7 @@ paths:
       tags:
       - campaign
       security:
-      - jwtAuth: []
+      - cookieAuth: []
       responses:
         '200':
           content:
@@ -310,7 +264,7 @@ paths:
               $ref: '#/components/schemas/CampaignRound'
         required: true
       security:
-      - jwtAuth: []
+      - cookieAuth: []
       responses:
         '201':
           content:
@@ -336,7 +290,7 @@ paths:
       tags:
       - campaign
       security:
-      - jwtAuth: []
+      - cookieAuth: []
       responses:
         '200':
           content:
@@ -373,7 +327,7 @@ paths:
               $ref: '#/components/schemas/CampaignRound'
         required: true
       security:
-      - jwtAuth: []
+      - cookieAuth: []
       responses:
         '200':
           content:
@@ -409,7 +363,7 @@ paths:
             schema:
               $ref: '#/components/schemas/PatchedCampaignRound'
       security:
-      - jwtAuth: []
+      - cookieAuth: []
       responses:
         '200':
           content:
@@ -434,7 +388,7 @@ paths:
       tags:
       - campaign
       security:
-      - jwtAuth: []
+      - cookieAuth: []
       responses:
         '204':
           description: No response body
@@ -451,7 +405,7 @@ paths:
       tags:
       - campaign
       security:
-      - jwtAuth: []
+      - cookieAuth: []
       responses:
         '200':
           content:
@@ -483,7 +437,7 @@ paths:
               $ref: '#/components/schemas/Campaign'
         required: true
       security:
-      - jwtAuth: []
+      - cookieAuth: []
       responses:
         '200':
           content:
@@ -514,7 +468,7 @@ paths:
             schema:
               $ref: '#/components/schemas/PatchedCampaign'
       security:
-      - jwtAuth: []
+      - cookieAuth: []
       responses:
         '200':
           content:
@@ -534,7 +488,7 @@ paths:
       tags:
       - campaign
       security:
-      - jwtAuth: []
+      - cookieAuth: []
       responses:
         '204':
           description: No response body
@@ -551,7 +505,7 @@ paths:
       tags:
       - idea
       security:
-      - jwtAuth: []
+      - cookieAuth: []
       responses:
         '200':
           content:
@@ -567,7 +521,7 @@ paths:
       tags:
       - idea
       security:
-      - jwtAuth: []
+      - cookieAuth: []
       responses:
         '200':
           content:
@@ -594,7 +548,7 @@ paths:
               $ref: '#/components/schemas/Idea'
         required: true
       security:
-      - jwtAuth: []
+      - cookieAuth: []
       responses:
         '201':
           content:
@@ -615,7 +569,7 @@ paths:
       tags:
       - idea
       security:
-      - jwtAuth: []
+      - cookieAuth: []
       responses:
         '200':
           content:
@@ -647,7 +601,7 @@ paths:
               $ref: '#/components/schemas/Idea'
         required: true
       security:
-      - jwtAuth: []
+      - cookieAuth: []
       responses:
         '200':
           content:
@@ -678,7 +632,7 @@ paths:
             schema:
               $ref: '#/components/schemas/PatchedIdea'
       security:
-      - jwtAuth: []
+      - cookieAuth: []
       responses:
         '200':
           content:
@@ -698,7 +652,7 @@ paths:
       tags:
       - idea
       security:
-      - jwtAuth: []
+      - cookieAuth: []
       responses:
         '204':
           description: No response body
@@ -721,7 +675,7 @@ paths:
       tags:
       - idea
       security:
-      - jwtAuth: []
+      - cookieAuth: []
       responses:
         '200':
           content:
@@ -761,7 +715,7 @@ paths:
               $ref: '#/components/schemas/Vote'
         required: true
       security:
-      - jwtAuth: []
+      - cookieAuth: []
       responses:
         '201':
           content:
@@ -782,7 +736,7 @@ paths:
       tags:
       - idea
       security:
-      - jwtAuth: []
+      - cookieAuth: []
       responses:
         '200':
           content:
@@ -798,7 +752,7 @@ paths:
       tags:
       - idea
       security:
-      - jwtAuth: []
+      - cookieAuth: []
       responses:
         '200':
           content:
@@ -825,7 +779,7 @@ paths:
               $ref: '#/components/schemas/Vote'
         required: true
       security:
-      - jwtAuth: []
+      - cookieAuth: []
       responses:
         '201':
           content:
@@ -846,7 +800,7 @@ paths:
       tags:
       - idea
       security:
-      - jwtAuth: []
+      - cookieAuth: []
       responses:
         '200':
           content:
@@ -878,7 +832,7 @@ paths:
               $ref: '#/components/schemas/Vote'
         required: true
       security:
-      - jwtAuth: []
+      - cookieAuth: []
       responses:
         '200':
           content:
@@ -909,7 +863,7 @@ paths:
             schema:
               $ref: '#/components/schemas/PatchedVote'
       security:
-      - jwtAuth: []
+      - cookieAuth: []
       responses:
         '200':
           content:
@@ -929,7 +883,7 @@ paths:
       tags:
       - idea
       security:
-      - jwtAuth: []
+      - cookieAuth: []
       responses:
         '204':
           description: No response body
@@ -940,7 +894,7 @@ paths:
       tags:
       - user
       security:
-      - jwtAuth: []
+      - cookieAuth: []
       responses:
         '200':
           content:
@@ -951,10 +905,11 @@ paths:
   /api/user/me/:
     get:
       operationId: user_me_retrieve
+      description: View to return data about the currently logged in user
       tags:
       - user
       security:
-      - jwtAuth: []
+      - cookieAuth: []
       responses:
         '200':
           content:
@@ -969,7 +924,7 @@ paths:
       tags:
       - user
       security:
-      - jwtAuth: []
+      - cookieAuth: []
       responses:
         '200':
           content:
@@ -1082,18 +1037,6 @@ components:
       - id
       - name
       - updated_at
-    CustomTokenObtainPair:
-      type: object
-      properties:
-        username:
-          type: string
-          writeOnly: true
-        password:
-          type: string
-          writeOnly: true
-      required:
-      - password
-      - username
     Idea:
       type: object
       properties:
@@ -1169,6 +1112,16 @@ components:
       - round_votes
       - title
       - updated_at
+    Login:
+      type: object
+      properties:
+        username:
+          type: string
+        password:
+          type: string
+      required:
+      - password
+      - username
     PatchedBusinessArea:
       type: object
       properties:
@@ -1299,25 +1252,6 @@ components:
       required:
       - count
       - round_pk
-    TokenBlacklistView:
-      type: object
-      properties:
-        refresh:
-          type: string
-          writeOnly: true
-      required:
-      - refresh
-    TokenRefresh:
-      type: object
-      properties:
-        access:
-          type: string
-          readOnly: true
-        refresh:
-          type: string
-      required:
-      - access
-      - refresh
     TypeEnum:
       enum:
       - CONTRIBUTOR
@@ -1435,7 +1369,7 @@ components:
       - round
       - updated_at
   securitySchemes:
-    jwtAuth:
-      type: http
-      scheme: bearer
-      bearerFormat: JWT
+    cookieAuth:
+      type: apiKey
+      in: cookie
+      name: sessionid
